    just the numeric part.
  * Re-implement scripts/time-stamper.bash without direct calls to
    dpkg-parsechangelog.
  * Call ./configure script directly, instead of relying on debhelper,
    to resolve incompatibilities with Bash-based script.
  * Use alternative way of installing icons to remove dependency on
    dh-exec.
  * Drop redundant dependency on dpkg-dev.

 -- Carlos Maddela <e7appew@gmail.com>  Mon, 14 Aug 2017 23:04:38 +1000

dvdisaster (0.79.5-3) unstable; urgency=medium

  * Team upload.
  * Fix another build failure on kFreeBSD.
  * Bump Standards Version to 4.0.1.
  * Regenerate patches with git version 2.14.0.
  * Do not suppress the display of compilation commands,
    so that build logs may be analysed by blhc.
  * Update uploaders list.

 -- Carlos Maddela <e7appew@gmail.com>  Mon, 14 Aug 2017 14:52:56 +1000

dvdisaster (0.79.5-2) unstable; urgency=medium

  [ Carlos Maddela ]
  * Team upload.
  * Bump Standards Version to 4.0.0.
  * Remove unnecessary calls to dpkg-parsechangelog from debian/rules.
  * debian/watch: Avoid repacking upstream tarballs unnecessarily.
  * Fix more typos in error messages and docs.
  * Fix FTBFS on Hurd and kFreeBSD.
  * Remove incorrect use of 'Origin: vendor' from DEP-3 patch headers.
  * Improve support for Hurd and kFreeBSD systems, although Hurd still
    builds without SCSI.

 -- TANIGUCHI Takaki <takaki@debian.org>  Mon, 07 Aug 2017 17:34:01 +0900

dvdisaster (0.79.5-1) unstable; urgency=medium

  [ Carlos Maddela ]
  * Team upload.
  * New upstream version [0.79.5]
  * Refresh and drop patches. The following patches have been dropped:
    + 01-libpng15.patch
    + 06-remove-encoding-from-desktop-file.patch
    + 07-fix-spelling-errors-in-binaries.patch
    + 09-fix-format-security-warnings.patch
    + 21-fix-privacy-breach-in-doco.patch
  * Update license to GPL-3.
  * Update clean rule as old files no longer apply.
  * Update documentation build and install rules.