@@ -10,6 +10,7 @@ dvdisaster (0.79.5-4) UNRELEASED; urgency=medium
   * Use alternative way of installing icons to remove dependency on
     dh-exec.
   * Drop redundant dependency on dpkg-dev.
+  * Reproducibly generate PDF documentation from TeX sources.
 
  -- Carlos Maddela <e7appew@gmail.com>  Mon, 14 Aug 2017 23:04:38 +1000
 
